--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,9 @@
   path = themes/anatole
   url = git://github.com/lxndrblz/anatole.git
 
+[submodule "themes/PaperMod"]
+	path = themes/PaperMod
+	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "themes/venture"]
+	path = themes/venture
+	url = https://github.com/Wtoll/venture.git
