--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -22,6 +22,11 @@ jobs:
           # needed for docsy theme
           extended: true
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm install postcss-cli
+
       - name: Build
         run: hugo --minify
 
