--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -24,8 +24,8 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-      - run: npm install postcss-cli
+          node-version: 18
+      - run: npm install postcss-cli autoprefixer
 
       - name: Build
         run: hugo --minify
