--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@ languageCode: en-us
 title: hartje.io
 
 contentDir: content/en
+custom_css: ["css/terminal.css"]
 gcs_engine_id: "011737558837375720776:fsdu1nryfng"
 
 disqusShortname: hartje-dot-io
@@ -23,11 +24,16 @@ params:
   ui:
     footer_about_disable: true
 
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
 
 # hugo module configuration
-
 module:
   imports:
-  - path: github.com/google/docsy
-  - path: github.com/google/docsy/dependencies
+  # - path: github.com/google/docsy
+  # - path: github.com/google/docsy/dependencies
   - path: github.com/FortAwesome/Font-Awesome
+
+theme: terminal
